--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container mt-5">
         <h1 class="mb-4">News Portal Live Search</h1>
         <div class="form-group">
-            <h6>Hot Topics : iPhone 15 </h6>
+            <h6>Hot Topics : iPhone 15&emsp;Samsung&emsp;Nokia</h6>
             <input type="text" class="form-control" id="keyword" placeholder="Enter keyword">
             <button class="btn btn-danger mt-3" onclick="searchNews()">Search</button>
         </div>
